munin (work)

  * Main: Fix bug with calculation of "Avg:" field when using graph_sums.
  * Main/Node: Added support for TLS.
  * Installation: Make the single python plugin use @@PYTHON@@ again.
  * Plugin: linux/users now has proper hashbang.
  * Plugin: Bugfix in generic/sendmail_mail* autoconf.
  * Plugin: Changed default log for generic/postfix_mailstats from syslog to
    mail.log. Downgraded it from auto to manual. (Deb#291720).
  * Plugin: Made generic/amavis autodetect logtail format (Deb#284638, 
    Deb#288395).
  * Plugins: generic/named probes for more log files before giving up 
    (Deb#291849).
  * Plugins: New wildcard plugin generic/courier_ by Micah Anderson
    (Deb#291854). 
  * Plugins: New plugin generic/perdition by Micah Anderson (Deb#291855).
  * Plugins: Plugin generic/squid_cache now handles multiple caches
    (Deb#288579).
  * Docs: Documented minimum requirements for use of graph_sums (SF#1109040).

munin (1.3.0)

  * Main: Allow dots in PNG paths (patch by Jacques Caruso).
  * Main: Properly size table below graphs in service-view.
  * Main: Fix bug which lead to some graphs failing with STACK error.
  * Main: Added limit message option "strtrunc".
  * Main: "contacts" can now be set to "none".
  * Main: Bugfix with graphs using both "graph_sums" and data aliases.
  * Main: Tables in service-view now sorted according to graph_order.
  * Main: Tables in service-view now containt the correct "Type" when using
    data aliases.
  * Plugins: generic/sendmail_mail{stats,traffic} updated.
  * Plugins: Made generic/samba more portable (fixes by Nicolas Stransky).
  * Plugins: Fixed typo in generic/loggrep breaking implicit labeling.
  * Plugins: Bugfix in generic/amavis.

munin (1.1.9)

  * Main: Optimised munin-cgi-graph a bit.
  * Main: Internal name (for use in munin.conf) added to the table in
    service view.
  * Main: Added option cgiurl_graph.
  * Main: Bugfix when using long labels and CGI graphing.