@@ -1,8 +1,8 @@
 munin (work)
 
   * Main: Fix bug with calculation of "Avg:" field when using graph_sums.
+  * Main: Make munin-limits work properly with perl 5.6 (SF#1109039).
   * Main/Node: Added support for TLS.
-  * Installation: Make the single python plugin use @@PYTHON@@ again.
   * Plugin: linux/users now has proper hashbang.
   * Plugin: Bugfix in generic/sendmail_mail* autoconf.
   * Plugin: Changed default log for generic/postfix_mailstats from syslog to
@@ -16,6 +16,7 @@ munin (work)
   * Plugins: New plugin generic/perdition by Micah Anderson (Deb#291855).
   * Plugins: Plugin generic/squid_cache now handles multiple caches
     (Deb#288579).
+  * Installation: Make the single python plugin use @@PYTHON@@ again.
   * Docs: Documented minimum requirements for use of graph_sums (SF#1109040).
 
 munin (1.3.0)
